--- a/app/templates/buy.html
+++ b/app/templates/buy.html
@@ -9,63 +9,38 @@
                 
     <main class="content">
 
-        {% include 'includes/navigation.html' %}
 
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4">
-            <div>
-                <button class="btn btn-secondary text-dark mr-2 dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="fas fa-plus mr-2"></span>New
-                </button>
-                <div class="dropdown-menu dashboard-dropdown dropdown-menu-left mt-2">
-                    <a class="dropdown-item font-weight-bold" href="#"><span class="far fa-file-alt mr-2"></span>Document</a>
-                    <a class="dropdown-item font-weight-bold" href="#"><span class="far fa-comment-dots mr-2"></span>Message</a>
-                    <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-box-open mr-2"></span>Product</a>
-                    <div role="separator" class="dropdown-divider"></div>
-                    <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-rocket text-danger mr-2"></span>Subscription Plan</a>
-                </div>
-            </div>
-            <div>
-                <button type="button" class="btn btn-primary mr-2"><span class="fas fa-calendar-alt"></span></button>
-                <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="fas fa-clipboard mr-2"></span>Reports
-                    <span class="icon icon-small ml-1"><span class="fas fa-chevron-down"></span></span>
-                </button>
-                <div class="dropdown-menu dashboard-dropdown dropdown-menu-left mt-2">
-                    <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-box-open mr-2"></span>Products</a>
-                    <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-store mr-2"></span>Customers</a>
-                    <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-cart-arrow-down mr-2"></span>Orders</a>
-                    <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-chart-pie mr-2"></span>Console</a>
-                    <div role="separator" class="dropdown-divider"></div>
-                    <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-rocket text-success mr-2"></span>All Reports</a>
-                </div>
-            </div>
-        </div>
+
+
         <div class="row">
                 <div class="card card-body bg-white border-light shadow-sm mb-4">
-                    <h2 class="h5 mb-4">Compra</h2>
+                    <h2 class="h5 mb-4">Dados de Compra</h2>
                     {% if lista %}
-                    <div>{{ aptid }}</div>
                     <form class="form-inline" method="POST" action="{{ url_for('user.buyend', apt_id=aptid) }}">
-                    <div class="form-group">
-                        <div class="input-group">
-                    <span class="input-group-addon">Please select</span>
+                        <div class="col-md-6 mb-3">
+                        <label for="cli">Clientes</label>
                     <select name="listadd" class="selectpicker form-control">
                         {% for listacli in lista %}
                             <option value= "{{ listacli }}" SELECTED>{{ listacli }}</option>"
                         {% endfor %}
                     </select>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="fpag">Forma de Pagamento</label>
                         <select name="pag" class="selectpicker form-control">
                         <option value="A vista">A vista</option>
                                 <option value="Parcelar 180x">Parcelar 180x</option>
                     </select>
+                        <div class="mt-3">
+                            <button type="submit" name="bton" value="work" class="btn btn-primary">Comprar</button>
+                        </div>
                     </div>
-                        <button type="submit" name="bton"  value="work" class="btn btn-default">Go</button>
-                </div>
             </form>
 
         {% endif %}
-        {% include 'includes/footer.html' %}
+
         </div>
+        {% include 'includes/footer.html' %}
         </div>
     </main>
 
