--- a/app/templates/listaimoveis.html
+++ b/app/templates/listaimoveis.html
@@ -9,39 +9,14 @@
                 
     <main class="content">
 
-        {% include 'includes/navigation.html' %}
+
 
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4">
                 <div class="d-block mb-4 mb-md-0">
-                    <h2 class="h4">Todas as rifas</h2>
+                    <h2 class="h4">Todos os imoveis</h2>
                 </div>
             </div>
-            <div class="table-settings mb-4">
-                <div class="row align-items-center justify-content-between">
-                    <div class="col col-md-6 col-lg-3 col-xl-4">
-                        <div class="input-group">
-                            <span class="input-group-text" id="basic-addon2"><span class="fas fa-search"></span></span>
-                            <input type="text" class="form-control" id="exampleInputIconLeft" placeholder="Procurar" aria-label="Procurar" aria-describedby="basic-addon2">
-                        </div>
-                    </div>
-                    <div class="col-4 col-md-2 col-xl-1 pl-md-0 text-right">
-                        <div class="btn-group">
-                            <button class="btn btn-link text-dark dropdown-toggle dropdown-toggle-split m-0 p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="icon icon-sm icon-gray">
-                                    <span class="fas fa-cog"></span>
-                                </span>
-                                <span class="sr-only">Toggle Dropdown</span>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-xs dropdown-menu-right">
-                                <span class="dropdown-item font-weight-bold text-dark">Show</span>
-                                <a class="dropdown-item d-flex font-weight-bold" href="#">10 <span class="icon icon-small ml-auto"><span class="fas fa-check"></span></span></a>
-                                <a class="dropdown-item font-weight-bold" href="#">20</a>
-                                <a class="dropdown-item font-weight-bold" href="#">30</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <div class="card card-body border-light shadow-sm table-wrapper table-responsive pt-0">
                 <table class="table table-hover">
                     <thead>
@@ -51,6 +26,7 @@
                             <th>Endereço</th>
                             <th>Valor Venda</th>
                             <th>Valor Comissão</th>
+                            <th>Status</th>
                             <th>Ação</th>
                         </tr>
                     </thead>
@@ -68,6 +44,7 @@
                             <td><span class="font-weight-normal">{{ apt.ENDERECO }}</span></td>
                             <td><span class="font-weight-normal">{{ apt.VALOR_VENDA }}</span></td>
                             <td><span class="font-weight-bold">{{ apt.VALOR_COMIS }}</span></td>
+                            <td><span class="font-weight-bold">{{ apt.STATUS }}</span></td>
                             <td>
                                 <div class="btn-group">
                                     <button class="btn btn-link text-dark dropdown-toggle dropdown-toggle-split m-0 p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -77,8 +54,13 @@
                                         <span class="sr-only">Toggle Dropdown</span>
                                     </button>
                                     <div class="dropdown-menu">
-                                       <form method="POST" class="dropdown-item" action="{{ url_for('user.buy', apt_id=apt.ID_IMOVEL) }}"><span class="fas fa-eye mr-2"></span><input class="btn" type="submit" name="view" value="Comprar"></form>
-{##}
+                                        {% if apt.STATUS == "Livre" %}
+                                        <form method="POST" class="dropdown-item" action="{{ url_for('user.buy', apt_id=apt.ID_IMOVEL) }}"><span class="fas fa-money-check"></span><input class="btn" type="submit" name="buy" value="Comprar"></form>
+                                        {% else %}
+                                        <span class="fas fa-ban"></span><input class="btn" type="submit" name="blocked" value="Reservado">
+                                        {% endif %}
+
+                                        {##}
 {#                                        <form method="POST" class="dropdown-item" action="{{ url_for('raffle.edit', rifa_id=raffle.ID_RIFA) }}"><span class="fas fa-edit mr-2"></span><input class="btn" type="submit" name="edit" value="Editar"></form>#}
 {#                                        <form method="POST" class="dropdown-item text-danger" action="{{ url_for('raffle.delete', rifa_id=raffle.ID_RIFA) }}"><span class="fas fa-trash-alt mr-2"></span><input class="btn" type="submit" name="delete" value="Remover"></form>#}
 {##}
@@ -94,34 +76,10 @@
                 </table>
                 <div class="card-footer px-3 border-0 d-flex align-items-center justify-content-between">
                     <nav aria-label="Page navigation example">
-                        <ul class="pagination mb-0">
-                            <li class="page-item">
-                                <a class="page-link" href="#">Previous</a>
-                            </li>
-                            <li class="page-item active">
-                                <a class="page-link" href="#">1</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#">2</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#">3</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#">4</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#">5</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link" href="#">Next</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="font-weight-bold small">Showing <b>5</b> out of <b>25</b> entries</div>
-                </div>
-            </div>
 
+                    </nav>
+            </div>
+            </div>
         {% include 'includes/footer.html' %}
 
     </main>
